# nightmare-software

./: .gitignore  .gitmodules  README.md  docker-compose.yml  requirements.txt  simulator.Dockerfile
hardware-handler/nightmare_control/: CMakeLists.txt  package.xml  setup.py
hardware-handler/nightmare_control/launch/: nightmare_control.launch  nightmare_gazebo.launch
hardware-handler/nightmare_gazebo/: CMakeLists.txt
hardware-handler/nightmare_gazebo/launch/: nightmare_gazebo.launch  nightmare_gazebo_joystick.launch  nightmare_gazebo_no_engine.launch
hardware-handler/nightmare_gazebo/src/: joint_state_redirector.py
hardware-handler/nightmare_movement_engine/: CMakeLists.txt  package.xml  setup.py
hardware-handler/nightmare_movement_engine/src/: engine.py  main.py  movements.py
hardware-handler/nightmare_movement_engine/src/modules/: config.py  movements.py  robot_math.py
hardware-handler/nightmare_movement_engine/src/robot_config/: config.py
hardware-handler/nightmare_movement_engine/src/robot_math/: inverse_kinematics.py
hardware-handler/nightmare_state_broadcaster/: CMakeLists.txt  package.xml  setup.py
hardware-handler/nightmare_state_broadcaster/msg/: joystick.msg
hardware-handler/nightmare_state_broadcaster/src/: broadcaster.py  config.py
nightmare/: CMakeLists.txt  package.xml  setup.py
nightmare-software/nightmare/: CMakeLists.txt  nightmare_config.yaml  package.xml  setup.py
nightmare-software/nightmare/launch/: nightmare.launch  nightmare_control_rviz_joystick.launch  nightmare_full.launch  nightmare_localization.launch  nightmare_navigation.launch  nightmare_pybullet.launch  nightmare_rtabmap.launch  nightmare_simulated.launch  nightmare_simulated_joystick_rviz.launch  nightmare_simulated_keyboard_rviz.launch
nightmare-software/nightmare/msg/: command.msg
nightmare-software/nightmare/src/nightmare/: config.py  engine.py  hardware.py
nightmare-software/nightmare/src/nightmare/modules/: bezier.py  debug.py  logging.py  math.py
nightmare-software/nightmare_ambient_awareness/: CMakeLists.txt  package.xml  setup.py
nightmare-software/nightmare_ambient_awareness/launch/: ambient_awareness.launch  standalone_ambient_awareness.launch  standalone_camera.launch
nightmare-software/nightmare_ambient_awareness/src/: main.py
nightmare-software/nightmare_ambient_awareness/src/nightmare_ambient_awareness/: main.py
nightmare-software/nightmare_ambient_awareness/src/nightmare_ambient_awareness/vision_modules/: marker_detector.py  motion_saliency.py  pose_detector_coral.py
nightmare-software/nightmare_ambient_awareness/src/vision_modules/: pose_detector_coral.py  pose_engine.py  static_saliency.py
nightmare-software/nightmare_bridge/: CMakeLists.txt  package.xml
nightmare-software/nightmare_bridge/src/: main.cpp
nightmare-software/nightmare_config/: CMakeLists.txt  package.xml  setup.py
nightmare-software/nightmare_config/src/nightmare_config/: config.py
nightmare-software/nightmare_engine/: CMakeLists.txt  package.xml  setup.py
nightmare-software/nightmare_engine/src/: engine.h  main.cpp
nightmare-software/nightmare_engine/src/engine/: engine.h
nightmare-software/nightmare_engine/src/nightmare/: engine.h  math.h  servo.h  types.h
nightmare-software/nightmare_hardware/: CMakeLists.txt  package.xml  setup.py
nightmare-software/nightmare_hardware/src/: main.cpp  main.py
nightmare-software/nightmare_hardware/src/hardware/: handler.cpp  handler.h
nightmare-software/nightmare_hardware/src/hardware/LX16A/: lx16a.h
nightmare-software/nightmare_hardware/src/nightmare_hardware/: logging.py  main.py
nightmare-software/nightmare_hardware_handler/: CMakeLists.txt  setup.py
nightmare-software/nightmare_hardware_handler/launch/: display.launch
nightmare-software/nightmare_hardware_handler/src/: hardware-handler.py
nightmare-software/nightmare_hardware_handler/src/nightmare_hardware_handler/: hardware-handler.py
nightmare-software/nightmare_math/: CMakeLists.txt  package.xml  setup.py
nightmare-software/nightmare_math/src/nightmare_math/: math.py
nightmare-software/nightmare_pybullet/: CMakeLists.txt  package.xml  setup.py
nightmare-software/nightmare_pybullet/config/: pybullet_params.yaml
nightmare-software/nightmare_pybullet/ros/config/: pybullet_params.yaml  pybullet_params_example.yaml
nightmare-software/nightmare_pybullet/ros/scripts/: joint_state_redirector_node  nightmare_pybullet_node
nightmare-software/nightmare_pybullet/ros/src/nightmare_pybullet/: joint_state_redirector.py  nightmare_pybullet.py
nightmare-software/nightmare_pybullet/src/nightmare_pybullet/: function_exec_manager.py  main.py
nightmare-software/nightmare_pybullet/src/nightmare_pybullet/plugins/: body_vel_control.py  control.py  environment.py  environment_template.py  joint_state_pub.py  laser_scanner.py  nightmare_force_sensors.py  odometry.py  (+2 more)
nightmare-software/nightmare_usb_joystick/: CMakeLists.txt  package.xml
nightmare-software/nightmare_usb_joystick/launch/: joystick.launch
nightmare-software/nightmare_usb_joystick/src/: main.py
nightmare-software/nightmare_usb_joystick/src/nightmare_usb_joystick/: main.py
nightmare/src/: start_body_imu.launch  start_sensor_nodes.launch  tracking.launch
nightmare_description/: CMakeLists.txt  package.xml
nightmare_description/meshes/: Component62_1.stl  base_link.stl  head_motor_pan_1.stl  leg_1_coxa_1.stl  leg_1_motor_1.stl  leg_1_motor__1__1.stl  leg_2_femur_1.stl  leg_2_motor_1.stl  leg_2_motor__1__1.stl  leg_3_femur_1.stl  leg_3_motor_1.stl  leg_3_tibia_1.stl  leg_4_coxa_1.stl  leg_4_femur_1.stl  leg_4_motor_1.stl  leg_5_coxa_1.stl  leg_5_femur_1.stl  leg_5_motor_1.stl  leg_5_motor__1__1.stl  leg_6_coxa_1.stl  leg_6_motor_1.stl  leg_6_motor__1__1.stl  leg_7_femur_1.stl  leg_7_motor_1.stl  leg_7_motor__1__1.stl  leg_7_motor__2__1.stl  leg_7_tibia_1.stl  leg_8_coxa_1.stl  leg_8_motor__1__1.stl  leg_8_motor__2__1.stl
nightmare_description/src/: nightmare_v2_control.launch  nightmare_v2_controller.yaml  nightmare_v2_gazebo.launch
nightmare_description/urdf/: nightmare_v2.urdf
(+157 files in other folders)
