<?xml version="1.0"?>
<package format="2">
  <name>nightmare_description</name>
  <version>0.0.1</version>
  <description>The nightmare_description package</description>

  <maintainer email="kek@gmail.com">nik</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>urdf</build_depend>
  <build_export_depend>urdf</build_export_depend>
  <exec_depend>urdf</exec_depend>

  <export>

  </export>
</package>
