<?xml version="1.0"?>
<package format="2">
  <name>nightmare_bridge</name>
  <version>0.0.0</version>
  <description>nightmare bridge</description>

  <maintainer email="niki.salli@gmail.com">nik</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
</package>
