<?xml version="0.0.1"?>
<package format="2">
  <name>nightmare_engine</name>
  <version>0.0.1</version>
  <description>nightmare engine</description>

  <maintainer email="niki.salli@gmail.com">nik</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend>
</package>