<?xml version="1.0"?>
<package format="2">
  <name>nightmare_math</name>
  <version>0.0.0</version>
  <description>nightmare math</description>

  <maintainer email="niki.salli@gmail.com">nik</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
</package>
